tests/ui/codegen/incorrect-arch-intrinsic.stderr
error: intrinsic `llvm.s390.sfpc` cannot be used with target arch `TARGET_ARCH`
  --> $DIR/incorrect-arch-intrinsic.rs:10:5
   |
LL |     fn foo(a: i32);
   |     ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

